--- a/styles/style.css
+++ b/styles/style.css
@@ -27,13 +27,8 @@ body {
 body {
   color: var(--black);
 
-  font-family: "DotGothic16", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   font-size: 16px;
-}
-
-h1 {
-  color: var(--dark-brown);
-  font-size: 3em;
 }
 
 h2 {
@@ -46,6 +41,30 @@ p {
   margin: 0;
 }
 /* ---- layout ---- */
+
+section {
+  background: linear-gradient(
+    -20deg,
+    var(--black),
+    var(--dark-grey),
+    var(--dark-brown)
+  );
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
 .btn {
   line-height: 50px;
@@ -60,20 +79,46 @@ canvas {
   display: flex;
   align-items: center;
   border: 2px solid black;
-  background-color: rgba(65, 64, 64, 0.185);
+  background-color: #262626;
   /* height: 50%; */
   margin: auto;
   width: 80vw;
+  z-index: 999;
+}
+
+h1 {
+  color: var(--dark-brown);
+  font-size: 3.5em;
+  text-shadow: -1px -1px 0 var(--dark-brown), 1px -1px 0 var(--dark-brown),
+    -1px 1px 0 var(--dark-grey), 1px 1px 0 #000;
+  margin: 0;
+}
+
+.splash-screen h1 {
+  font-family: "Codystar", sans-serif;
+}
+
+h2 {
+  color: var(--dark-grey);
+
+  font-size: 2em;
+
+  margin: 0;
+  padding-bottom: 50px;
 }
 
 p {
-  padding-bottom: 10px;
-  color: var(--dark-brown);
+  color: var(--light-brown);
   font-size: 2em;
+  text-shadow: -1px -1px 0 var(--dark-brown), 1px -1px 0 var(--dark-brown),
+    -1px 1px 0 var(--dark-grey), 1px 1px 0 #000;
 }
 .score {
   color: var(--grey);
   font-size: 2.2em;
+
+  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, */
+  /* 1px 1px 0 #000; */
 }
 
 /* ---- section ---- */
