--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body {
 body {
   color: var(--black);
 
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Press Start 2P", cursive;
   font-size: 16px;
 }
 
@@ -85,7 +85,7 @@ h1 {
 }
 
 .splash-screen h1 {
-  font-family: "Codystar", sans-serif;
+  font-family: "Press Start 2P", cursive;
 }
 
 h2 {
@@ -103,7 +103,7 @@ p {
 }
 .score {
   color: var(--grey);
-  font-size: 2.2em;
+  font-size: 1.7em;
 }
 
 #howToPlay span:last-child {
@@ -111,12 +111,20 @@ p {
 }
 
 #scoreBoard p {
-  font-size: 1.5em;
+  padding-bottom: 10px;
+  font-size: 1em;
 }
 #scoreBoard {
   width: 33%;
 }
+#img-title {
+  width: 500px;
+  align-items: flex-end;
+}
 
+#img-subtitle {
+  width: 30%;
+}
 /* ---- section ---- */
 
 .splash-screen {
@@ -185,13 +193,21 @@ p {
 
 #final-score {
   display: flex;
-  padding-top: 20px;
+  padding-top: 30px;
   align-content: center;
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
   flex-direction: column;
 }
+#final-score p {
+  font-size: 1.4em;
+}
+#final-score .score {
+  padding-top: 20px;
+  font-size: 2.2em;
+}
+
 /* animated start button */
 .btn-start {
   color: var(--grey);
