add import font at styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,8 @@
   --dark-brown: #5e503f;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 /* ---- reset ---- */
 
 html {
